; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/prometheus_sysctl_exporter/extr_prometheus_sysctl_exporter.c_oidvalue_set_unsigned.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/prometheus_sysctl_exporter/extr_prometheus_sysctl_exporter.c_oidvalue_set_unsigned.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.oidvalue = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@UNSIGNED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.oidvalue*, i32)* @oidvalue_set_unsigned to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @oidvalue_set_unsigned(%struct.oidvalue* %0, i32 %1) #0 {
  %3 = alloca %struct.oidvalue*, align 8
  %4 = alloca i32, align 4
  store %struct.oidvalue* %0, %struct.oidvalue** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @UNSIGNED, align 4
  %6 = load %struct.oidvalue*, %struct.oidvalue** %3, align 8
  %7 = getelementptr inbounds %struct.oidvalue, %struct.oidvalue* %6, i32 0, i32 1
  store i32 %5, i32* %7, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.oidvalue*, %struct.oidvalue** %3, align 8
  %10 = getelementptr inbounds %struct.oidvalue, %struct.oidvalue* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store i32 %8, i32* %11, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
